--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>WallCology</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
+	<!--This is a test comment. Don't ask! -->
 </head>
 
 <body>
